# LADEL

./: .gitignore  CMakeLists.txt  README.md
amd/Include/: SuiteSparse_config.h
docs/: Doxyfile  annotated.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_8f15fbd252100736bcaef6e9b5b45f52.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  formula.repository  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  index.html  ladel_8c.html  ladel_8h.html  ladel_8h_source.html  ladel__add_8c.html  ladel__add_8h.html  ladel__add_8h_source.html  ladel__col__counts_8c.html  ladel__col__counts_8h.html  ladel__col__counts_8h_source.html  ladel__constants_8h.html  ladel__constants_8h_source.html  ladel__copy_8c.html  ladel__copy_8h.html  ladel__copy_8h_source.html  ladel__debug__print_8c.html  ladel__debug__print_8h.html  ladel__debug__print_8h_source.html  ladel__etree_8c.html  ladel__etree_8h.html  ladel__etree_8h_source.html  ladel__global_8c.html  ladel__global_8h.html  ladel__global_8h_source.html  ladel__ldl__numeric_8c.html  ladel__ldl__numeric_8h.html  (+48 more)
docs/doxypages/: mainpage.dox
docs/includes/: ref.bib
docs/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  defines_0.js  defines_1.js  defines_2.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  defines_8.js  defines_9.js  files_0.js  functions_0.js  pages_0.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js  variables_7.js  variables_8.js  (+2 more)
include/: col_counts.h  constants.h  copy.h  debug_print.h  etree.h  global.h  ladel.h  ladel_add.h  ladel_col_counts.h  ladel_constants.h  ladel_copy.h  ladel_debug_print.h  ladel_etree.h  ladel_global.h  ladel_ldl_numeric.h  ladel_ldl_symbolic.h  ladel_matmat.h  ladel_matvec.h  ladel_pattern.h  ladel_permutation.h  ladel_postorder.h  ladel_rank1_mod.h  ladel_row_mod.h  ladel_scale.h  ladel_submatrix.h  ladel_transpose.h  ladel_types.h  ladel_upper_diag.h  ldl_numeric.h  ldl_symbolic.h  matvec.h  pattern.h  permutation.h  postorder.h  rank1_mod.h  row_mod.h  scale.h  transpose.h  types.h  upper_diag.h
interfaces/mex/: ladel.m  ladel_mex.c  ladel_setup.m  ladel_test.m  ladel_test_permutation.m
shell/: buildTest.sh
src/: col_counts.c  copy.c  debug_print.c  etree.c  global.c  ladel.c  ladel_add.c  ladel_col_counts.c  ladel_copy.c  ladel_debug_print.c  ladel_etree.c  ladel_global.c  ladel_ldl_numeric.c  ladel_ldl_symbolic.c  ladel_matmat.c  ladel_matvec.c  ladel_pattern.c  ladel_permutation.c  ladel_rank1_mod.c  ladel_row_mod.c  ladel_scale.c  ladel_transpose.c  ladel_upper_diag.c  ldl_numeric.c  ldl_symbolic.c  matvec.c  pattern.c  permutation.c  postorder.c  rank1_mod.c  row_mod.c  scale.c  transpose.c  upper_diag.c
test/: CMakeLists.txt
test/include/: minunit.h
test/src/: run_all_tests.c  test_col_counts.c  test_etree.c  test_ldl.c  test_matmat.c  test_matvec.c  test_permutation.c  test_postorder.c  test_rank1_mod.c  test_row_mod.c  test_scale.c  test_transpose.c  test_upper_diag.c
